tests/programs/eval.stderr
SyntaxError: missing or invalid tokens for s_step
DivideByZeroError: attempted to divide by zero
at <stl:operators>:68:26
at <stl:operators>:66:11
at <stl:operators>:65:19
at <file>:1:4
at <file>:1:2
NameError: No variable named `aaaaa` found!
at programs/eval.re:8:23
at programs/eval.re:8:22
